deployment/soapbubble/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-admin
spec:
  template:
    spec:
      containers:
      - name: bot-admin
        image: soapbubble/bot-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
spec:
  template:
    spec:
      containers:
      - name: bot
        image: soapbubble/bot
