deployment/soapbubble/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: twitch
  annotations:
    rancher.io/globalDNS.hostname: "twitch.soapbubble.online"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - twitch.soapbubble.online
      secretName: twitch-tls
  rules:
    - host: twitch.soapbubble.online
      http:
        paths:
          - path: /socket.io
            backend:
              serviceName: bot
              servicePort: 80
          - path: /bot
            backend:
              serviceName: bot
              servicePort: 80
          - path: /
            backend:
              serviceName: bot-admin
              servicePort: 80
